# react-rs

./: Cargo.toml  License.md  README.md  pyproject.toml
.github/scripts/: CI.yml  build.ps1
.github/workflows/: build.yml  test.yml
examples/: constrain.py  simulate.py
python/react_rs/: __init__.py  _weibull.py
src/: agg.rs  io.rs  lib.rs  sim.rs  tx.rs
tests/: test_app.py  test_models_weibull.py  test_weibull.py
tests/data/: input.parquet
