[package]
version = "0.9.3"
name = "react-rs"
edition = "2024"

[lib]
name = "react_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = [
    "abi3",
    "abi3-py312",
    "experimental-inspect",
] }
pyo3-polars = "0.26.0"
rand = "0.10"
rayon = "1.12"
polars = { version = "0.53", features = ["lazy", "cum_agg"] }
